# Smart_City_AI_Agent

./: .env.example  .gitignore  notes.txt  pyproject.toml  requirements.txt
app/: config.py  main.py
app/agent/: __init__.py  anomaly.py  cache.py  correlation.py  graph.py  reasoning.py  response_models.py  sessions.py  state.py  tools.py
app/models/: schemas.py
app/tools/: air_quality.py  base.py  tfl.py  tomtom.py  weather.py
docs/: LANGGRAPH_GUIDE.md
frontend/: app.py
scripts/: launch.ps1  test_agent_live.py
tests/: conftest.py  test_agent.py  test_agent_flow.py  test_air_quality.py  test_anomaly.py  test_api.py  test_cache.py  test_correlation.py  test_reasoning.py  test_sessions.py  test_tfl.py  test_tomtom.py  test_weather.py
